feat: get batch api
